--- a/src/Components/LoginSignup/LoginSignup.css
+++ b/src/Components/LoginSignup/LoginSignup.css
@@ -43,10 +43,13 @@
     display: flex;
     align-items: center;
     margin: auto;
-    width: 480px;
+    width: 100%;
+    max-width: 30em;
     height: 60px;
     background: #eaeaea;
     border-radius: 6px;
+    box-sizing: border-box;
+
 
 }
 
@@ -64,7 +67,8 @@
     outline: none;
     color: #797979;
     font-size: 19px;
-    margin: auto 6em;
+    margin: auto auto;
+
 }
 
 .forgot-password {
@@ -104,4 +108,24 @@
 .gray {
     background-color: #eaeaea;
     color: #676767
+}
+
+@media (max-width: 800px) {
+    .input {
+        max-width: 300px;
+    }
+}
+
+/* When the screen width is 600px or less */
+@media (max-width: 600px) {
+    .input {
+        max-width: 200px;
+    }
+}
+
+/* When the screen width is 400px or less */
+@media (max-width: 400px) {
+    .input {
+        max-width: 100px;
+    }
 }
